# AVH-Hello

./: Hello.Debug+CS300.cbuild.yml  Hello.cbuild-idx.yml
isambard/UserShares/je/AVH-Hello/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
isambard/UserShares/je/AVH-Hello/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake  compile_commands.json
isambard/UserShares/je/AVH-Hello/tmp/Hello.Debug+CS300/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
isambard/UserShares/je/AVH-Hello/tmp/Hello.Debug+CS300/src/Hello.Debug+CS300-stamp/: Hello.Debug+CS300-configure-.cmake  Hello.Debug+CS300-source_dirinfo.txt
isambard/UserShares/je/AVH-Hello/tmp/Hello.Debug+CS300/tmp/: Hello.Debug+CS300-cfgcmd.txt  Hello.Debug+CS300-mkdirs.cmake
